--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U pip
-          python -m pip install pytest pytest-randomly
+          python -m pip install tox
       - name: Run tests for x-days-anniversary
         run: |
           cd x-days-anniversary/
-          pytest -vv
+          tox -e py
