[feat] Configure GET (a.k.a. takina)
% curl 127.0.0.1:8080/chinanago
さかなー🐟

--- a/lycoreco-aquatope/cloudnative_version/k8s/api.yaml
+++ b/lycoreco-aquatope/cloudnative_version/k8s/api.yaml
@@ -31,3 +31,14 @@ spec:
             cpu: "500m"
         ports:
         - containerPort: 8080
+        volumeMounts:
+        - name: mappings
+          mountPath: /home/wiremock/mappings
+          readOnly: true
+      volumes:
+      - name: mappings
+        configMap:
+          name: chisa-taki-config
+          items:
+          - key: "takina.mappings"
+            path: "takina.json"
